# loc-ai-proxy

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  STATUS.md  config.yaml.example  docker-compose.yml  test-config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  phase2_feature.md  phase2_github_copilot.md  phase2_metrics.md  phase2_ollama.md  phase2_openrouter.md  phase2_streaming.md  phase2_tool_calls.md  provider_request.md
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_DECISIONS.md  DEVELOPMENT.md  OPENCODE_AUTH.md  PI_SETUP.md  PROVIDER_SETUP.md
src/: cli.rs  config.rs  lib.rs  main.rs  models.rs  server.rs  session.rs  utils.rs
src/api/: mod.rs  models.rs
src/providers/: anthropic.rs  mod.rs  opencode.rs
src/utils/: errors.rs  mod.rs
systemd/: loc-ai-proxy.service
