[package]
name = "loc-ai-proxy"
version = "0.1.0"
edition = "2024"
authors = ["Davis <davis@example.com>"]
description = "OpenAI-compatible proxy for local AI agents - unifying access to multiple providers"
license = "MIT"
repository = "https://github.com/sirdavis99/loc-ai-proxy"
keywords = ["ai", "proxy", "openai", "opencode", "llm"]
categories = ["api-bindings", "web-programming", "command-line-utilities"]
rust-version = "1.78"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["http2", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper = { version = "1.4", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Configuration
config = "0.14"
dotenvy = "0.15"
dirs = "5.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Session management
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Utilities
lazy_static = "1.5"
once_cell = "1.20"
regex = "1.11"
url = "2.5"
which = "6.0"
tempfile = "3.13"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.5"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "locaiproxy"
path = "src/main.rs"
